--- a/res/xml/coldfusion_settings_statusbar.xml
+++ b/res/xml/coldfusion_settings_statusbar.xml
@@ -3,4 +3,12 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-</PreferenceScreen>
+    <PreferenceScreen
+        android:fragment="com.android.settings.coldfusion.StatusBarClockStyle"
+        android:key="clock_style_pref"
+        android:title="@string/status_bar_clock"
+	    android:summary="@string/status_bar_clock_summary" />
+    </PreferenceCategory>
+
+</PreferenceCategory>
+ 
