--- a/res/xml/dashboard_categories.xml
+++ b/res/xml/dashboard_categories.xml
@@ -71,7 +71,6 @@
                 />
 
     </dashboard-category>
-
     <!-- CONFIGURATION -->
     <dashboard-category
             android:id="@+id/coldfusion_section"
@@ -83,6 +82,17 @@
                 android:title="@string/coldfusion_settings_title"
                 android:fragment="com.android.settings.coldfusion.ColdfusionSettings" 
         		android:icon="@drawable/ic_settings_coldfusion" />
+
+    <!-- PERSONALIZATiION -->
+    <dashboard-tile
+                android:id="@+id/bitsyko_layers"
+                android:icon="@drawable/ic_bitsyko_layers"
+                android:title="@string/bitsyko_layers">     
+		<intent
+                android:action="android.intent.action.MAIN"
+                android:targetPackage="com.lovejoy777.rroandlayersmanager"
+                android:targetClass="com.lovejoy777.rroandlayersmanager.menu" />
+        </dashboard-tile>
     </dashboard-category>
 
     <!-- DEVICE -->
