--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -17,6 +17,13 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="@string/about_settings">
 
+        <!-- Coldfusion about -->
+        <PreferenceScreen
+            android:key="about_coldfusion"
+            android:fragment="com.android.settings.about.coldfusion"
+            android:title="@string/about_coldfusion"
+            android:summary="@string/coldfusion_about_summary" />
+
         <!-- System update settings - launches activity -->
         <PreferenceScreen android:key="system_update_settings"
                 android:title="@string/system_update_settings_list_item_title"
@@ -101,11 +108,11 @@
                 android:title="@string/kernel_version"
                 android:summary="@string/device_info_default"/>
 
-        <!-- Detailed build version -->
-        <Preference android:key="build_number"
+         <!-- ColdFusion build date -->
+        <Preference android:key="coldfusion_date"
                 style="?android:preferenceInformationStyle"
-                android:title="@string/build_number"
-                android:summary="@string/device_info_default"/>
+                android:title="@string/coldfusion_date"
+                android:summary="@string/coldfusion_date_default" />
 
         <!-- SELinux status information -->
         <Preference android:key="selinux_status"
