--- a/res/values/coldfusion_strings.xml
+++ b/res/values/coldfusion_strings.xml
@@ -28,7 +28,7 @@
     <string name="joetech">Joe-Tech</string>
     <string name="joetech_dev">Main Cold Fusion developer</string>
     <string name="joetech_twit">Joe-Tech\'s Twitter</string>
-    <string name="joetech_goopleplus">Joe-Tech\'s G+ profile</string>
+    <string name="joetech_googleplus">Joe-Tech\'s G+ profile</string>
     <string name="coldfusion_googleplus">Cold Fusion G+ community</string>
     <string name="donate">Donate to support development</string>
     <string name="contribute">Contributors</string>
@@ -50,6 +50,7 @@
     <string name="status_bar_screen_title">Status bar</string>
     <string name="navigation_bar_screen_title">Navigation bar</string>
     <string name="gestures_title">Gestures</string>
+    <string name="recents_panel_settings">Recent apps settings</string>
     <string name="lockscreen_title">Lock screen</string>
     <string name="power_menu_title">Power menu</string>
     <string name="volume_rocker_screen_title">Volume rocker</string>
@@ -67,6 +68,8 @@
     <string name="recents_clear_all_location_bottom_right">Bottom right</string>
     <string name="recents_clear_all_location_bottom_left">Bottom left</string>
     <string name="recents_clear_all_location_bottom_center">Bottom center</string>
+    <string name="recents_clear_all_dismiss_all_title">Clear all tasks</string>
+    <string name="recents_clear_all_dismiss_all_summary">Include foreground task when clearing all</string>
 
 </resources>
 
