--- a/res/xml/coldfusion_settings_navigation.xml
+++ b/res/xml/coldfusion_settings_navigation.xml
@@ -3,7 +3,10 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-</PreferenceScreen>
+    <PreferenceCategory
+	 android:key="recents_panel"
+         android:title="@string/recents_panel_settings" >
+
     <com.android.settings.Coldfusion.SystemSettingSwitchPreference
         android:key="show_clear_all_recents"
         android:title="@string/show_clear_all_recents_button_title"
@@ -18,7 +21,13 @@
         android:defaultValue="3"
         android:dependency="show_clear_all_recents" />
 
+    <com.android.settings.Coldfusion.SystemSettingSwitchPreference
+        android:key="recents_clear_all_dismiss_all"
+        android:title="@string/recents_clear_all_dismiss_all_title"
+        android:summary="@string/recents_clear_all_dismiss_all_summary"
+        android:defaultValue="true"
+        android:dependency="show_clear_all_recents" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
-
